<resources>
    <string name="app_name">Armada Fleet Commander</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_rename">Rename</string>

    <string name="title_activity_squadron_list">SquadronListActivity</string>
    <string name="title_activity_fleet_builder">FleetBuilderActivity</string>
    <string name="add_squadron">Add Squadron</string>
    <string name="title_imperial">Imperial</string>
    <string name="title_rebel">Rebel</string>

    <string name="fleet_name_default">My Awesome Fleet</string>
    <string name="fleet_points_allowed_default">400</string>
    <string name="fleet_points_divider_default">/</string>
    <string name="fleet_points_used_default">399</string>

    <string name="squadron_list_title">Squadrons</string>
    <string name="squadron_selector_title_default">Select A Squadron…</string>
    <string name="squadron_points_allowed_default">133</string>
    <string name="squadron_points_used_default">56</string>
    <string name="squadron_points_divider_default">/</string>
    <string name="squadron_title_default">Luke Skywalker</string>
    <string name="squadron_class_default">X-Wing Squadron</string>
    <string name="squadron_speed_default">3</string>
    <string name="squadron_hull_default">5</string>
    <string name="squadron_points_default">20</string>
    <string name="squadron_desc_default">While attacking a ship, if the defending hull zone has no shields, you may reroll any number of dice in your attack pool.</string>
    <string name="squadron_type_default">Bomber</string>

    <string name="ship_list_title">Capital Ships</string>
    <string name="ship_title_default">CR90 Corvette A</string>
    <string name="ship_class_default">Corvette</string>
    <string name="ship_speed_default">4</string>
    <string name="ship_hull_default">4</string>
    <string name="ship_points_default">39</string>

    <string name="commander_default">Admiral Ackbar</string>
    <string name="assault_obj_default">AG</string>
    <string name="defense_obj_default">HA</string>
    <string name="nav_obj_default">NH</string>
    <string name="objective_title_default">Advanced Gunnery</string>
    <string name="objective_vp_points">20</string>
    <string name="objective_desc_default">&lt;b>Setup:&lt;/b> After deploying fleets, each player chooses 1 of his ships to be an objective ship, starting with the first player. \n\n&lt;b>Special Rule:&lt;/b> The first player's objective ship may perform each of its attacks from the same hull zone. It cannot target the same hull zone or squadron more than once with that hull zone. The second player's objective ship may perform each of its attacks from the same hull zone, and it may do so against the same targets. \n\n&lt;b>End of Game:&lt;/b> The fleet point cost of a destroyed objective ship is doubled. Do not double the cost of its upgrade cards.</string>


    <!-- Bundle keys -->
    <string name="key_fleet">KEY_FLEET</string>
    <string name="key_faction_id">KEY_FACTION_ID</string>
    <string name="key_fragment_id">KEY_FRAGMENT_ID</string>
    <string name="key_ship">KEY_SHIP</string>

    <string name="upgrade_header">Upgrades</string>
    <string name="upgrade_empty">Empty</string>
    <string name="upgrade_points_default">8</string>
    <string name="upgrade_title_default">Enhanced Armaments</string>
    <string name="upgrade_mod_default">Modification</string>
    <string name="upgrade_desc_default">The battery armaments for your left and right hull zones are increased by 1 red die. Now I\'m gonna type more to fill up this space with stuff. But now I need a fourth line.</string>
    <string name="upgrade_unique">*</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_fleet">New Fleet</string>
    <string name="ship_cmd_value_default">1</string>
    <string name="ship_sqd_value_default">3</string>
    <string name="ship_eng_value_default">2</string>
    <string name="ship_spd_value_default">4</string>


</resources>
