<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#b7a4a4">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@mipmap/upgrade_icon"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrade_unique"
            android:id="@+id/textView"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="2dp"
            android:textColor="#000000"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrade_title_default"
            android:id="@+id/textView2"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@android:style/TextAppearance.Holo.Widget.TextView.PopupMenu"
            android:layout_weight="1"
            android:contentDescription="@string/upgrade_empty" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrade_points_default"
            android:id="@+id/textView3"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:textColor="#470202" />
    </LinearLayout>
</RelativeLayout>