<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ComponentListItem"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/lyt_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical|bottom|end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_ship_speed"
            style="@style/textMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/ship_speed_default" />

        <TextView
            android:id="@+id/txt_ship_hull"
            style="@style/textMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/ship_hull_default" />

        <TextView
            android:id="@+id/txt_ship_points"
            style="@style/textLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/ship_points_default" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/lyt_values"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_unique_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="*"
                android:visibility="visible" />

            <com.travismosley.android.ui.view.FitTextView
                android:id="@+id/txt_ship_title"
                style="@style/textLarge"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ship_title_default" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_ship_class"
            style="@style/textSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ship_class_default" />
    </LinearLayout>

</RelativeLayout>