<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_fleet"
    tools:context=".activity.FleetBuilderActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lyt_objective_view">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            style="@style/ObjectiveItem"
            android:id="@+id/lyt_command_view"
            android:background="#757575">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/commander_default"
                android:id="@+id/txt_commander"
                android:layout_marginLeft="8dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="32"
                android:id="@+id/txt_cmd_points"
                android:singleLine="false"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/assault_obj_default"
            android:id="@+id/txt_obj_assault"
            android:background="#d50000"
            style="@style/ObjectiveItem"
            android:layout_weight="2" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/defense_obj_default"
            android:id="@+id/txt_obj_defense"
            android:background="#0288d1"
            style="@style/ObjectiveItem"
            android:layout_weight="2" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_obj_default"
            android:id="@+id/txt_obj_navigation"
            android:background="#ffc107"
            style="@style/ObjectiveItem"
            android:layout_weight="2" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lyt_fleet_ships"
        android:layout_alignParentEnd="false"
        android:layout_below="@+id/lyt_objective_view">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lyt_ships_overview"
            android:paddingEnd="15dp"
            android:paddingStart="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ship_list_title"
                android:id="@+id/txt_ships_title"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_add_ship"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="+"
                android:background="@drawable/abc_btn_switch_to_on_mtrl_00012"
                style="@android:style/Widget.Button.Small" />
        </RelativeLayout>

        <com.nhaarman.listviewanimations.itemmanipulation.DynamicListView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:id="@+id/list_ships"
            tools:listitem="@layout/list_item_ship"
            android:layout_below="@+id/lyt_ships_overview"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="true"
            android:stackFromBottom="false"
            android:textFilterEnabled="false"
            android:divider="@android:color/transparent"
            android:dividerHeight="4dp"
            android:elevation="2dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lyt_fleet_ships"
        android:id="@+id/lyt_fleet_squadrons">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lyt_squadrons_overview"
            android:paddingEnd="15dp"
            android:paddingStart="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/squadron_list_title"
                android:id="@+id/txt_squadrons_title"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:singleLine="true"
                android:phoneNumber="true" />

            <Button
                style="@android:style/Widget.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_add_squadron"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="+"
                android:background="@drawable/abc_btn_switch_to_on_mtrl_00012" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/squadron_points_allowed_default"
                android:id="@+id/txt_squad_points_allowed"
                android:layout_toStartOf="@+id/btn_add_squadron"
                android:layout_centerVertical="true"
                android:paddingEnd="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/squadron_points_divider_default"
                android:id="@+id/txt_squad_points_divider"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/txt_squad_points_allowed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/squadron_points_used_default"
                android:id="@+id/txt_squad_points_used"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/txt_squad_points_divider"
                android:layout_alignParentEnd="false" />
        </RelativeLayout>

        <com.nhaarman.listviewanimations.itemmanipulation.DynamicListView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/list_squadrons"
            tools:listitem="@layout/list_item_squadron"
            android:layout_below="@+id/lyt_squadrons_overview"
            android:footerDividersEnabled="false"
            android:divider="@android:color/transparent"
            android:dividerHeight="4dp"
            android:elevation="2dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textFilterEnabled="false" />
    </RelativeLayout>

</RelativeLayout>