<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:background="#fbbfbf"
    android:minHeight="100dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/type_cost_container"
            android:layout_alignParentEnd="false"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_upgrade_icon"
                android:src="@mipmap/upgrade_icon"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upgrade_points_default"
                android:id="@+id/txt_upgrade_points"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentEnd="false"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp" />
        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/lyt_upgrade_info"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lyt_upgrade_id">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upgrade_unique"
                    android:id="@+id/txt_upgrade_unique"
                    android:layout_marginRight="2dp"
                    android:visibility="visible"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upgrade_title_default"
                    android:id="@+id/txt_upgrade_title"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="0dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:textColor="#000000"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upgrade_mod_default"
                    android:id="@+id/txt_upgrade_mod"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="30dp"
                    android:textAppearance="@android:style/TextAppearance.Material.Notification.Emphasis" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/upgrade_desc_default"
                android:id="@+id/txt_upgrade_desc"
                android:layout_marginTop="10dp"
                android:layout_gravity="top"
                android:elegantTextHeight="false"
                android:nestedScrollingEnabled="false"
                android:maxLines="3" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>