<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:background="#fbbfbf"
    android:minHeight="100dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/lyt_objective_info"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lyt_upgrade_id">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/objective_title_default"
                    android:id="@+id/txt_objective_title"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="0dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:textColor="#000000"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/objective_vp_points"
                    android:id="@+id/txt_victory_points"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="30dp"
                    android:textAppearance="@android:style/TextAppearance.Material.Notification.Emphasis" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/objective_desc_default"
                android:id="@+id/txt_objective_desc"
                android:layout_marginTop="10dp"
                android:layout_gravity="top"
                android:elegantTextHeight="false"
                android:nestedScrollingEnabled="false" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>